gcc/testsuite/gdc.test/fail_compilation/fail207.d
/*
TEST_OUTPUT:
---
fail_compilation/fail207.d(11): Error: found end of file instead of initializer
fail_compilation/fail207.d(11): Error: semicolon needed to end declaration of `x`, instead of `End of File`
fail_compilation/fail207.d(10):        `x` declared here
---
*/

int x = {
